# starkeep-core

./: .env.example  .gitignore  CLAUDE.md  INSTRUCTIONS.md  LICENSE  PLAN.md  README.md  SECURITY.md  TODO-admin-db.md  TODO-sync.md  TODO-transfer-state-machine.md  TODO.md  authoring-an-app.md  data-roles-and-permissions.md  docker-compose.yml  eslint.config.js  inspecting-starkeep-cloud-data.md  owasp-asvs-evaluation.md  package.json  permissions-gaps.md  pnpm-lock.yaml  pnpm-workspace.yaml  roles-and-permissions.md  system-design-discrepancies.md  system-design.md  tsconfig.base.json  turbo.json
apps/admin-desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/admin-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/admin-desktop/src-tauri/capabilities/: default.json
apps/admin-desktop/src-tauri/icons/: icon.icns
apps/admin-desktop/src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
apps/admin-remix/: CLAUDE.md  package.json  tsconfig.json
apps/admin-web/: README.md  next.config.ts  package.json  vitest.config.ts
apps/bootstrap-web/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
apps/cloud-server/: package.json  pg-client-factory.ts  server.ts
apps/data-server/: README.md  cli.ts  cognito-auth.ts  http-object-storage.ts  http-remote-metadata-adapter.ts  manifest.json  (+3 more)
apps/photos-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/photos-desktop/src-tauri/capabilities/: default.json
apps/photos-desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/tasks-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/tasks-desktop/src-tauri/capabilities/: default.json
apps/tasks-desktop/src-tauri/src/: lib.rs  main.rs
docs/: README.md  api-reference.md  architecture-intent.md  architecture.md  auth-analysis.md  building-an-app.md  concepts.md  data-vs-metadata-app-architecture.md  deployment.md  getting-started.md  infrastructure.md  reference.md  role-taxonomy.md  shared-vs-app-specific-data.md  sync-engine.md
e2e/: README.md  global-setup.ts  package.json  playwright.config.ts  tsconfig.json
e2e-aws/: README.md  package.json  tsconfig.json  vitest.config.ts
meta-docs/: README.md  dsql-occ-retry-plan.md  index.sqlite
scripts/: check-browser-compat.sh  load-env.sh  reset-local-data.sh  teardown-bootstrap.sh  teardown-cloud-apps.sh  teardown-cloud-data-server.sh  test-sync.sh
(+508 files in other folders)
