[package]
name = "starkeep-admin-desktop"
version = "0.0.1"
edition = "2021"
description = "Starkeep Admin desktop application"

[lib]
name = "starkeep_admin_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "starkeep-admin-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.35", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
aws-sdk-s3 = "1"
base64 = "0.22"
